# index-oxide-mcp

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml  rust.yml
src/: cli.rs  config.rs  errors.rs  main.rs  manage.rs  mcp_server.rs
src/clients/: embedder.rs  mod.rs
src/clients/gemini/: client.rs  mod.rs
src/clients/ollama/: client.rs
src/clients/qdrant/: client.rs  mod.rs
src/gemini/: client.rs  mod.rs
src/jobs/: mod.rs  registry.rs
src/models/: chunk.rs  job.rs  mod.rs  search.rs
src/pipeline/: chunker.rs  discovery.rs  embedder.rs  filters.rs  hashing.rs  indexer.rs  language.rs  mod.rs  parser.rs  refresh.rs
src/qdrant/: client.rs
src/search/: mod.rs  retriever.rs
src/util/: hashing.rs  language.rs  mod.rs
